[project]
name = "better-budget-tracker"
version = "0.1.0"
description = "An all in one python CLI tool which allows the user to input and track their income and expenses."
readme = "README.md"
authors = [
    {name = "jerrygreg"},
]
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pytest>=8.4.2",
    "rich>=12.0.0",
    "sympy>=1.12"
]

[project.scripts]
better_budget = "better_budget_tracker.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
#[tool.setuptools.packages.find]
#where = ["."]  # Look in the project root
#include = ["*"]  # Include all packages by default
#exclude = ["data*", "reports*"]  # Exclude the data and reports directories
